# Nav-ws_Intra-process-communication_test

./: .gitignore  .gitmodules  README.md  README_old.md  ToDoList.md  dependencies.repos  doctor_log.txt  doctor_log2.txt  local_player_5000.sh  local_referee_2350.sh  save_map.sh  terrain_analysis_code_review.md  terrain_analysis_threading_analysis.md  threading_comparison.txt  tutorial.md
map_simulation/: firstmap.pgm  firstmap.yaml  map_simu_2025-08-06_10-10-56.pgm  map_simu_2025-08-06_10-10-56.yaml  map_simu_2025-08-06_15-31-52.pgm  map_simu_2025-08-06_15-31-52.yaml
performance_test_results_20251109_165924/: node_list.txt  process_count.txt  resource_usage.csv  topic_latency.txt
src/fake_referee/: CMakeLists.txt  README.md  dev_log.md  package.xml
src/fake_referee/include/fake_referee/: fake_referee.hpp
src/fake_referee/launch/: fake_referee.launch.py
src/fake_referee/params/: fake_referee_params.yaml
src/fake_referee/src/: fake_referee.cpp
src/pb2025_sentry_behavior/behavior_trees/: merged_main.xml  plan_b.xml
src/pb2025_sentry_behavior/launch/: pb2025_sentry_behavior_launch.py
src/pb2025_sentry_behavior/params/: sentry_behavior.yaml
src/pb2025_sentry_behavior/src/: pb2025_sentry_behavior_server.cpp
src/pb2025_sentry_nav/: .gitmodules  README.md  README_en.md
src/pb2025_sentry_nav/buaa_sentry_relocalization/: CMakeLists.txt  README.md  package.xml
src/pb2025_sentry_nav/buaa_sentry_relocalization/include/buaa_sentry_relocalization/: buaa_sentry_relocalizaiton.hpp
src/pb2025_sentry_nav/buaa_sentry_relocalization/src/: buaa_sentry_relocalization.cpp
src/pb2025_sentry_nav/kiss_matcher_relocalization/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/kiss_matcher_relocalization/include/kiss_matcher_relocalization/: kiss_matcher_relocalization.hpp
src/pb2025_sentry_nav/kiss_matcher_relocalization/src/: kiss_matcher_relocalization.cpp
src/pb2025_sentry_nav/pb2025_nav_bringup/: package.xml
src/pb2025_sentry_nav/terrain_analysis/: CMakeLists.txt  DOCUMENTATION.md  DOXYGEN_REPORT.md  Doxyfile  generate_docs.sh  package.xml
src/pb2025_sentry_nav/terrain_analysis/README/: DOCUMENTATION.md  Doxyfile
src/pb2025_sentry_nav/terrain_analysis/README/docs/html/: annotated.html  classes.html  classterrain__analysis_1_1TerrainAnalysisNode-members.html  classterrain__analysis_1_1TerrainAnalysisNode.html  classterrain__analysis_1_1TerrainAnalysisNode__inherit__graph.map  classterrain__analysis_1_1TerrainAnalysisNode__inherit__graph.md5  classterrain__analysis_1_1TerrainAnalysisNode_a36850cdc1fd1c7902bf3beeaea265197_icgraph.map  classterrain__analysis_1_1TerrainAnalysisNode_a36850cdc1fd1c7902bf3beeaea265197_icgraph.md5  classterrain__analysis_1_1TerrainAnalysisNode_a477381b14d4f20c80d14db3c4d82ea43_icgraph.map  classterrain__analysis_1_1TerrainAnalysisNode_a477381b14d4f20c80d14db3c4d82ea43_icgraph.md5  classterrain__analysis_1_1TerrainAnalysisNode_a4fe79057dabc0e27c74f5e78e01fe787_cgraph.map  classterrain__analysis_1_1TerrainAnalysisNode_a4fe79057dabc0e27c74f5e78e01fe787_cgraph.md5  classterrain__analysis_1_1TerrainAnalysisNode_a4fe79057dabc0e27c74f5e78e01fe787_icgraph.map  classterrain__analysis_1_1TerrainAnalysisNode_a4fe79057dabc0e27c74f5e78e01fe787_icgraph.md5  classterrain__analysis_1_1TerrainAnalysisNode_a5ca48c02ab9c9af66f766a0aeeac9fd7_cgraph.map  classterrain__analysis_1_1TerrainAnalysisNode_a5ca48c02ab9c9af66f766a0aeeac9fd7_cgraph.md5  classterrain__analysis_1_1TerrainAnalysisNode_a93483536951ec0a52ec1df59bce05b58_cgraph.map  classterrain__analysis_1_1TerrainAnalysisNode_a93483536951ec0a52ec1df59bce05b58_cgraph.md5  classterrain__analysis_1_1TerrainAnalysisNode_a93483536951ec0a52ec1df59bce05b58_icgraph.map  classterrain__analysis_1_1TerrainAnalysisNode_a93483536951ec0a52ec1df59bce05b58_icgraph.md5  classterrain__analysis_1_1TerrainAnalysisNode_af4a8be0e34f923da9a979a309f005476_icgraph.map  classterrain__analysis_1_1TerrainAnalysisNode_af4a8be0e34f923da9a979a309f005476_icgraph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  graph_legend.md5  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  menudata.js  namespacemembers.html  (+41 more)
src/pb2025_sentry_nav/terrain_analysis/README/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js
src/pb2025_sentry_nav/terrain_analysis/include/terrain_analysis/: terrain_analysis_new.hpp
src/pb2025_sentry_nav/terrain_analysis/launch/: terrain_analysis.launch  terrain_analysis.launch.py
src/pb2025_sentry_nav/terrain_analysis/src/: terrainAnalysis.cpp  terrain_analysis(new).cpp  terrain_analysis_new.cpp
src/pb2025_sentry_nav/terrain_analysis_ext/: CMakeLists.txt  README.md  package.xml
src/pb2025_sentry_nav/terrain_analysis_ext/include/terrain_analysis_ext/: terrain_analysis_ext_new.hpp
src/pb2025_sentry_nav/terrain_analysis_ext/launch/: terrain_analysis_ext.launch.py
src/pb2025_sentry_nav/terrain_analysis_ext/src/: terrainAnalysisExt.cpp  terrain_analysis_ext_new.cpp
src/rmu_gazebo_simulator/: dependencies.repos
test/: DEPLOYMENT_COMPLETE.md  FILES_SUMMARY.md  PERFORMANCE_TESTING_README.md  README.md  TESTING_GUIDE.md  TEST_RESULTS_SUMMARY.md  performance_test.sh  process_analysis.md  quick_check.sh  run_test.sh
test/results/test_results_20251109/: PERFORMANCE_REPORT.md  component_list.txt  node_list.txt  process_count.txt  resource_usage.csv  tf_monitor.txt  topic_latency.txt
(+15 files in other folders)
